# trader-strategy

./: .gitignore  README.md  run
.github/workflows/: deploy-dev-app.yml  deploy-prod-app.yml  unit_tests.yml
indicators/: Cargo.toml  CargoLambda.toml  README.md
indicators/src/: btc_data.csv  event_handler.rs  lib.rs  main.rs  types.rs
indicators/src/historical_data/: BTC_DATA.rs  mod.rs
plotting/: README.md  candle_stick_data.py  historical_data_generator.py  requirements.in  requirements.txt
serverless/: .coveragerc  package-lock.json  package.json  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  serverless.yml  sls_envs.yml
serverless/functions/: backtesting.py  strategies.py
serverless/models/: api.py  order_configs.py  queues.py
serverless/tests/backtest/: conftest.py
serverless/tests/backtest/strategy/: conftest.py  test_backtesting.py
serverless/tests/unit/: conftest.py  test_strategy.py
serverless/utils/: api_client.py  common.py  exceptions.py  lambda_client.py  logger.py  oauth.py
