[package]
name = "trader-indicators-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "indicators"
path = "src/lib.rs"

[dependencies]
lambda_runtime = "0.13.0"
serde = "1.0.219"
serde_json = "1.0.140"
ta = "0.5.0"
tokio = { version = "1", features = ["macros"] }
once_cell = "1.18"
csv = "1.3.1"
